unnecessary important, min-height to prevent hero-content box-shadow overlap with adjacent on very narrow views

--- a/hail/www/navbar.css
+++ b/hail/www/navbar.css
@@ -167,7 +167,7 @@
 
 @media (min-width: 768px) {
   #hail-navbar #hail-navbar-collapse {
-    display: block!important;
+    display: block;
   }
   #hail-navbar .navbar-right .dropdown-menu {
     left: auto;
